# Tracker

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0a120a4767ad_init.py  167b6b694e40_change_datetime_to_timezone_aware.py  7b5c451f3010_add_timestamps_and_due_date_to_tasks.py  b460ed25dc88_create_tasks_table.py  cd6c6b91a997_add_users_and_auth.py  dcbf3ea19a05_change_datetime_to_timezone_aware.py  f3026a04d56f_create_tasks_table.py
app/: main.py
app/core/: config.py  dependencies.py  security.py
app/database/: __init__.py  session.py
app/handlers/: auth.py  tasks.py
app/models/: __init__.py  task.py  user.py
app/repositories/: task.py  user.py
app/schemas/: task_schema.py  user_schema.py
app/service/: auth_service.py  task_service.py
nginx/: nginx-https.conf  nginx-temp.conf  nginx.conf
